--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@ function showSlides(n) {
 }
 </script>
 
-<div class="container">
   <header id="ducky">
     <div style="text-align:center">
       <h1>7 Easy Steps to Thread a Sewing Machine</h1>
@@ -93,7 +92,6 @@ function showSlides(n) {
     </div>
 </header>
 
-<hr>
 
 <article class="main">
   <div class="p1">
@@ -167,6 +165,7 @@ function showSlides(n) {
   </div>
 
 
+
 <script type="text/javascript">
     $(document).ready(function(){
           //all js goes in here
@@ -177,6 +176,7 @@ function showSlides(n) {
 
         });
 </script>
+</article>
 
 </body>
 </html>
